@@ -23,6 +23,7 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <!--<script src="_content/Toolbelt.Blazor.Gamepad/script.min.js"></script>-->
 </body>
 
 </html>
