@@ -32,6 +32,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    @*<script src="_content/Toolbelt.Blazor.Gamepad/script.min.js"></script>*@
 </body>
 
 </html>
