@@ -20,7 +20,10 @@ namespace SampleSite.Server
         // For more information on how to configure your application, visit https://go.microsoft.com/fwlink/?LinkID=398940
         public void ConfigureServices(IServiceCollection services)
         {
-            services.AddGamepadList();
+            services.AddGamepadList(options =>
+            {
+                //options.DisableClientScriptAutoInjection = true;
+            });
 
             services.AddRazorPages();
             services.AddServerSideBlazor();
