@@ -1,4 +1,5 @@
-﻿using Microsoft.Extensions.DependencyInjection;
+﻿using System;
+using Microsoft.Extensions.DependencyInjection;
 using Microsoft.JSInterop;
 using Toolbelt.Blazor.Gamepad;
 
@@ -15,7 +16,19 @@ namespace Toolbelt.Blazor.Extensions.DependencyInjection
         /// <param name="services">The Microsoft.Extensions.DependencyInjection.IServiceCollection to add the service to.</param>
         public static IServiceCollection AddGamepadList(this IServiceCollection services)
         {
-            services.AddScoped(serviceProvider => new GamepadList(serviceProvider.GetService<IJSRuntime>()));
+            return services.AddGamepadList(configure: null);
+        }
+
+        /// <summary>
+        ///  Adds a gamepad list service to the specified Microsoft.Extensions.DependencyInjection.IServiceCollection.
+        /// </summary>
+        /// <param name="services">The Microsoft.Extensions.DependencyInjection.IServiceCollection to add the service to.</param>
+        /// <param name="configure"></param>
+        public static IServiceCollection AddGamepadList(this IServiceCollection services, Action<GamepadOptions> configure)
+        {
+            var options = new GamepadOptions();
+            configure?.Invoke(options);
+            services.AddScoped(serviceProvider => new GamepadList(serviceProvider.GetService<IJSRuntime>(), options));
             return services;
         }
     }
