@@ -1,0 +1,13 @@
+﻿namespace Toolbelt.Blazor.Gamepad
+{
+    /// <summary>
+    /// Provides programmatic configuration for the Blazor Gamepad.
+    /// </summary>
+    public class GamepadOptions
+    {
+        /// <summary>
+        /// Gets or sets the flag that disables client script auto-injection.
+        /// </summary>
+        public bool DisableClientScriptAutoInjection { get; set; }
+    }
+}
